--- a/03-building-agents/module_10_Evaluating_Agents/M10_demo.ipynb
+++ b/03-building-agents/module_10_Evaluating_Agents/M10_demo.ipynb
@@ -33,6 +33,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "1136c582-e487-4066-ba36-26258b7c35da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "nb_dir = Path(__file__).parent if \"__file__\" in globals() else Path.cwd()\n",
+    "parent = nb_dir.parent  # points to 03-building-agents\n",
+    "if str(parent) not in sys.path:\n",
+    "    sys.path.insert(0, str(parent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "e3448288",
    "metadata": {},
    "outputs": [],
@@ -50,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f655eb09",
    "metadata": {},
    "outputs": [],
@@ -68,17 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ad4bd02c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,20 +121,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "14b6d8e0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import TypedDict, List, Literal, Optional\n",
+    "\n",
+    "class ToolStatus(TypedDict, total=False):\n",
+    "    status: Literal[\"ok\", \"no_context\", \"error\"]\n",
+    "    error: Optional[str]\n",
+    "\n",
+    "class GameItem(TypedDict):\n",
+    "    Game: str\n",
+    "    Platform: str\n",
+    "    Score: int\n",
+    "\n",
+    "class GetGamesResult(ToolStatus, total=False):\n",
+    "    games: List[GameItem]\n",
+    "\n",
     "@tool\n",
-    "def get_games(num_games: int = 1, top: bool = True) -> List[Dict]:\n",
+    "def get_games(num_games: int = 1, top: bool = True) -> GetGamesResult:\n",
     "    \"\"\"\n",
-    "    Returns the top or bottom N games with highest or lowest scores.    \n",
-    "    args:\n",
-    "        num_games (int): Number of games to return (default is 1)\n",
-    "        top (bool): If True, return top games, otherwise return bottom (default is True)\n",
+    "    Return top or bottom N games by score.\n",
+    "\n",
+    "    Inputs:\n",
+    "      num_games (int): number of games to return (default 1)\n",
+    "      top (bool): True for top, False for bottom\n",
+    "\n",
+    "    Returns schema:\n",
+    "      {\n",
+    "        \"type\": \"object\",\n",
+    "        \"properties\": {\n",
+    "          \"status\": {\"type\":\"string\",\"enum\":[\"ok\",\"no_context\",\"error\"]},\n",
+    "          \"error\": {\"type\":\"string\"},\n",
+    "          \"games\": {\n",
+    "            \"type\":\"array\",\n",
+    "            \"items\":{\"type\":\"object\",\"properties\":{\n",
+    "              \"Game\":{\"type\":\"string\"},\n",
+    "              \"Platform\":{\"type\":\"string\"},\n",
+    "              \"Score\":{\"type\":\"integer\"}\n",
+    "            }}\n",
+    "          }\n",
+    "        }\n",
+    "      }\n",
     "    \"\"\"\n",
-    "    data = [\n",
+    "    data: List[GameItem] = [\n",
     "        {\"Game\": \"The Legend of Zelda: Breath of the Wild\", \"Platform\": \"Switch\", \"Score\": 98},\n",
     "        {\"Game\": \"Super Mario Odyssey\", \"Platform\": \"Switch\", \"Score\": 97},\n",
     "        {\"Game\": \"Metroid Prime\", \"Platform\": \"GameCube\", \"Score\": 97},\n",
@@ -128,11 +176,12 @@
     "        {\"Game\": \"Donkey Kong Country Returns\", \"Platform\": \"Wii\", \"Score\": 87},\n",
     "        {\"Game\": \"Luigi's Mansion 3\", \"Platform\": \"Switch\", \"Score\": 86},\n",
     "        {\"Game\": \"Pikmin 3\", \"Platform\": \"Wii U\", \"Score\": 85},\n",
-    "        {\"Game\": \"Animal Crossing: New Leaf\", \"Platform\": \"3DS\", \"Score\": 88}\n",
+    "        {\"Game\": \"Animal Crossing: New Leaf\", \"Platform\": \"3DS\", \"Score\": 88},\n",
     "    ]\n",
-    "    # Sort the games list by Score\n",
-    "    sorted_games = sorted(data, key=lambda x: x['Score'], reverse=top)\n",
-    "    return sorted_games[:num_games]"
+    "    if num_games <= 0:\n",
+    "        return {\"status\": \"no_context\", \"games\": []}\n",
+    "    sorted_games = sorted(data, key=lambda x: x[\"Score\"], reverse=top)\n",
+    "    return {\"status\": \"ok\", \"games\": sorted_games[:num_games]}"
    ]
   },
   {
@@ -145,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cf079568",
    "metadata": {},
    "outputs": [],
@@ -167,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8abd8653",
    "metadata": {},
    "outputs": [],
@@ -177,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "11dd713c",
    "metadata": {},
    "outputs": [],
@@ -204,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "08152474",
    "metadata": {},
    "outputs": [
@@ -228,7 +277,7 @@
       "--- Black Box (Final Response) Evaluation ---\n",
       "Overall Score: 1.00\n",
       "Task Completed: True\n",
-      "Feedback: The agent response successfully identifies the best game in the dataset, providing the correct title and score, which fully answers the user's query. The format is appropriate as it clearly states the game title and score. Additionally, the response follows the implicit instruction to provide a definitive answer regarding the best game.\n",
+      "Feedback: The agent response successfully identifies the best game in the dataset, providing the name, platform, and score, which fully answers the user's query. The format is appropriate as it clearly presents the information. Additionally, the response follows the implicit instruction to provide a clear and concise answer.\n",
       "\n",
       "--- Single Step Evaluation ---\n",
       "Overall Score: 1.00\n",
@@ -238,9 +287,9 @@
       "--- Trajectory Evaluation ---\n",
       "Overall Score: 1.00\n",
       "Steps Taken: 4\n",
-      "Total Tokens: 331\n",
-      "Execution Time: 2.32s\n",
-      "Estimated Cost: $0.000124\n",
+      "Total Tokens: 713\n",
+      "Execution Time: 3.96s\n",
+      "Estimated Cost: $0.000267\n",
       "Feedback: Trajectory: 4 steps, Tools used: ['get_games'], Expected: ['get_games']\n"
      ]
     }
@@ -316,9 +365,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f6acdca-bbfe-4431-ac60-f3f13b9260fe",
+   "metadata": {},
+   "source": [
+    "# Patterns\n",
+    "  \n",
+    "  - Consistent tool selection when the query maps clearly to one tool.\n",
+    "  - Short trajectories (≈4 steps) and reasonable token use (hundreds per run).\n",
+    "  - Final responses concise and on-target for well-scoped prompts.\n",
+    "\n",
+    "# Weaknesses\n",
+    "\n",
+    "  - Limited coverage: few test cases means blind spots (ambiguous queries, missing params, multi-step reasoning).\n",
+    "  - Fallback behavior only triggers when tools return “no_context”; needs broader tests (conflicting tools, empty results, errors).\n",
+    "  - Little stress on token budget (many tools, long prompts, long chats) in evaluations.\n",
+    "\n",
+    "# Strengths\n",
+    "\n",
+    "  - Unified tool return envelope (status/no_context/error) works; agent can reason on structured outputs.\n",
+    "  - Auto-included tool docs and return schemas reduce prompt handcrafting.\n",
+    "  - Token measurement and budget pruning integrated; observable total tokens and costs.\n",
+    "\n",
+    "# Iterate (next actions)\n",
+    "\n",
+    "## Expand test coverage:\n",
+    "\n",
+    "  - Ambiguous queries (should ask clarifying Qs before tool use).\n",
+    "  - Missing parameters (ensure “ask before call” behavior).\n",
+    "  - Multi-tool flows (e.g., search → compare → answer).\n",
+    "  - Error paths (tool errors/timeouts/empty results).\n",
+    "\n",
+    "## Strengthen fallback/routing:\n",
+    "\n",
+    "  - Add tests where first tool returns “ok” but low-signal answer; require trying another tool.\n",
+    "  - Add a simple “confidence” heuristic (e.g., answer length/keywords) to gate fallback.\n",
+    "\n",
+    "## Tighten token discipline:\n",
+    "\n",
+    "  - Add tests with many tools/long history; verify pruning and summaries kick in.\n",
+    "  - Log per-step tokens and cumulative_tokens in trajectory metrics.\n",
+    "\n",
+    "## Dial reliability:\n",
+    "\n",
+    "  - Lower temperature for evaluations (e.g., 0.1–0.2) for consistency.\n",
+    "  - Add one-shot examples in instructions for tricky patterns (only if not fine-tuning).\n",
+    "\n",
+    "## Data realism:\n",
+    "\n",
+    "  - Add noisy/edge “game” entries and verify sorting/formatting.\n",
+    "  - Add adversarial prompts to validate tool doc adherence and injection resistance.\n",
+    "\n",
+    "## Optional enhancements\n",
+    "\n",
+    "  - Include tool latency and success/failure rates in evaluation output.\n",
+    "  - Add a “return format contract” test (JSON shape validation against return schema)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22d99eaa",
+   "id": "58fe2754-eded-4978-8f7b-c7f083443864",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -326,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -340,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
