--- a/03-building-agents/module_09_Long-term_Memory/M09_demo.ipynb
+++ b/03-building-agents/module_09_Long-term_Memory/M09_demo.ipynb
@@ -25,6 +25,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6e3f9085-8bab-4fe2-8304-19a33d44eae8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "nb_dir = Path(__file__).parent if \"__file__\" in globals() else Path.cwd()\n",
+    "parent = nb_dir.parent  # points to 03-building-agents\n",
+    "if str(parent) not in sys.path:\n",
+    "    sys.path.insert(0, str(parent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "dfdb85a0",
    "metadata": {},
    "outputs": [],
@@ -42,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9f724f4a",
    "metadata": {},
    "outputs": [],
@@ -61,17 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e3721051",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "80a53070",
    "metadata": {},
    "outputs": [],
@@ -100,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b074d619",
    "metadata": {},
    "outputs": [],
@@ -111,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b0c55506",
    "metadata": {},
    "outputs": [],
@@ -130,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c3c79064",
    "metadata": {},
    "outputs": [],
@@ -159,26 +175,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "df51e872",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ids': [['04cee36b-093a-4bab-923b-15c4e30de250']],\n",
+       "{'ids': [['c46e8ffd-c4ff-4b1b-a745-63dd5a48f0e8']],\n",
        " 'embeddings': None,\n",
        " 'documents': [['I prefer Sony games']],\n",
        " 'uris': None,\n",
        " 'included': ['documents', 'distances', 'metadatas'],\n",
        " 'data': None,\n",
-       " 'metadatas': [[{'session_id': 'games',\n",
-       "    'timestamp': '06-22-2025 23:22:51',\n",
-       "    'user_id': '2'}]],\n",
-       " 'distances': [[0.3349607586860657]]}"
+       " 'metadatas': [[{'user_id': '2',\n",
+       "    'timestamp': '10-12-2025 23:11:04',\n",
+       "    'session_id': 'games'}]],\n",
+       " 'distances': [[0.33839720487594604]]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "414e10d9",
    "metadata": {},
    "outputs": [],
@@ -239,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "eeac7542",
    "metadata": {},
    "outputs": [],
@@ -262,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "ed82270c",
    "metadata": {},
    "outputs": [],
@@ -285,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "5e2542b4",
    "metadata": {},
    "outputs": [],
@@ -434,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "77a4fd89",
    "metadata": {},
    "outputs": [],
@@ -444,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ffe291cc",
    "metadata": {},
    "outputs": [],
@@ -457,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "f02a5b35",
    "metadata": {},
    "outputs": [],
@@ -483,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "f8614989",
    "metadata": {},
    "outputs": [],
@@ -494,17 +510,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "181d2e3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MemorySearchResult(fragments=[MemoryFragment(content='I prefer dark mode', owner='Henrique', namespace='default', timestamp=1750040572.504482)], metadata={'distances': [0.37668654322624207]})"
+       "MemorySearchResult(fragments=[MemoryFragment(content='I prefer dark mode', owner='Henrique', namespace='default', timestamp=1759731095.434908)], metadata={'distances': [0.3769509196281433]})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "a7d2b9bf",
    "metadata": {},
    "outputs": [
@@ -527,7 +543,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[MemoryFragment(content='I have a Nintendo Switch', owner='Henrique', namespace='default', timestamp=1749781372.504482)]\n",
+      "[MemoryFragment(content='I have a Nintendo Switch', owner='Henrique', namespace='default', timestamp=1759471895.434908)]\n",
       "{'distances': [0.5204347372055054]}\n"
      ]
     }
@@ -556,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "e804477c",
    "metadata": {},
    "outputs": [],
@@ -601,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "c2a361ac",
    "metadata": {},
    "outputs": [],
@@ -645,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "13f2c3f4",
    "metadata": {},
    "outputs": [],
@@ -655,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "98a43e9f",
    "metadata": {},
    "outputs": [],
@@ -675,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "cdd371b2",
    "metadata": {},
    "outputs": [
@@ -701,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "0e0d125a",
    "metadata": {},
    "outputs": [
@@ -712,14 +728,14 @@
        " 'instructions': 'You are a helpful assistant. Try to use memory if needed. And if the user shares a preference, use your tools to register memories.',\n",
        " 'messages': [SystemMessage(role='system', content='You are a helpful assistant. Try to use memory if needed. And if the user shares a preference, use your tools to register memories.'),\n",
        "  UserMessage(role='user', content='I prefer dark mode'),\n",
-       "  AIMessage(role='assistant', content=None, tool_calls=[ChatCompletionMessageToolCall(id='call_vkL7gPEh6a8509kcX0rloOgG', function=Function(arguments='{\"content\":\"User prefers dark mode.\"}', name='register_memory'), type='function')]),\n",
-       "  ToolMessage(role='tool', content='\"Saved new memory\"', tool_call_id='call_vkL7gPEh6a8509kcX0rloOgG', name='register_memory'),\n",
-       "  AIMessage(role='assistant', content=\"I've noted that you prefer dark mode! If there's anything else you'd like to share or if you have more preferences, feel free to let me know.\", tool_calls=None)],\n",
+       "  AIMessage(role='assistant', content=None, tool_calls=[ChatCompletionMessageToolCall(id='call_HvQDHhdwclBskdebxaf5jz5R', function=Function(arguments='{\"content\":\"User prefers dark mode.\"}', name='register_memory'), type='function')]),\n",
+       "  ToolMessage(role='tool', content='\"Saved new memory\"', tool_call_id='call_HvQDHhdwclBskdebxaf5jz5R', name='register_memory'),\n",
+       "  AIMessage(role='assistant', content=\"I've noted that you prefer dark mode. If there's anything else you'd like to share or discuss, feel free!\", tool_calls=None)],\n",
        " 'current_tool_calls': None,\n",
        " 'session_id': 'session_1'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "01fa35c6",
    "metadata": {},
    "outputs": [
@@ -756,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "f77c9410",
    "metadata": {},
    "outputs": [
@@ -767,14 +783,14 @@
        " 'instructions': 'You are a helpful assistant. Try to use memory if needed. And if the user shares a preference, use your tools to register memories.',\n",
        " 'messages': [SystemMessage(role='system', content='You are a helpful assistant. Try to use memory if needed. And if the user shares a preference, use your tools to register memories.'),\n",
        "  UserMessage(role='user', content='What are my lighting preferences?'),\n",
-       "  AIMessage(role='assistant', content=None, tool_calls=[ChatCompletionMessageToolCall(id='call_Bd4Hd3bJhI8zHkQ1x7PlOAAf', function=Function(arguments='{\"content\":\"lighting preferences\"}', name='search_memory'), type='function')]),\n",
-       "  ToolMessage(role='tool', content='\"((MemoryFragment(content=\\'User prefers dark mode.\\', owner=\\'Henrique\\', namespace=\\'conversation\\', timestamp=1750645374), 0.32105663418769836),)\"', tool_call_id='call_Bd4Hd3bJhI8zHkQ1x7PlOAAf', name='search_memory'),\n",
-       "  AIMessage(role='assistant', content=\"Your lighting preference is for dark mode. If you have any other specific preferences or if you'd like to add more details, feel free to share!\", tool_calls=None)],\n",
+       "  AIMessage(role='assistant', content=None, tool_calls=[ChatCompletionMessageToolCall(id='call_wNxpWALRrcYo1PeRdV7bS8DS', function=Function(arguments='{\"content\":\"lighting preferences\"}', name='search_memory'), type='function')]),\n",
+       "  ToolMessage(role='tool', content='\"((MemoryFragment(content=\\'User prefers dark mode.\\', owner=\\'Henrique\\', namespace=\\'conversation\\', timestamp=1760335914), 0.32122325897216797),)\"', tool_call_id='call_wNxpWALRrcYo1PeRdV7bS8DS', name='search_memory'),\n",
+       "  AIMessage(role='assistant', content='Your lighting preference is for dark mode. Would you like to add or update any other preferences related to lighting?', tool_calls=None)],\n",
        " 'current_tool_calls': None,\n",
        " 'session_id': 'session_2'}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +810,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -808,7 +824,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
