--- a/03-building-agents/project/Udaplay_01_starter_project.ipynb
+++ b/03-building-agents/project/Udaplay_01_starter_project.ipynb
@@ -5,7 +5,7 @@
    "id": "6fdd0bcb",
    "metadata": {},
    "source": [
-    "# [STARTER] Udaplay Project"
+    "# Udaplay Project"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "61283b25",
    "metadata": {},
    "outputs": [],
@@ -59,40 +59,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a8d56169",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import json\n",
-    "import chromadb\n",
-    "from chromadb.utils import embedding_functions\n",
-    "from dotenv import load_dotenv"
+    "from typing import List\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "from lib.vector_db import VectorStore, VectorStoreManager, CorpusLoaderService"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd10c06e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Create a .env file with the following variables\n",
-    "# OPENAI_API_KEY=\"YOUR_KEY\"\n",
-    "# CHROMA_OPENAI_API_KEY=\"YOUR_KEY\"\n",
-    "# TAVILY_API_KEY=\"YOUR_KEY\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "87e465d4",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3f444800-0aec-4a82-815b-5111c58a47ab",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Load environment variables\n",
-    "# load_dotenv()"
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
@@ -104,15 +111,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e37c34ed-872b-46c9-8317-f9e182c0840a",
+   "metadata": {},
+   "source": [
+    "#### How VectorStoreManager and CorpusLoaderService work\n",
+    "- **VectorStoreManager**: wraps a Chroma client and configures the OpenAI embedding function. It uses `OPENAI_BASE_URL` (defaulting to Vocareum) and `CHROMA_EMBED_MODEL` for embeddings, and exposes `get_or_create_store(name)` to return a Chroma collection wrapped as a `VectorStore`.\n",
+    "- **VectorStore (wrapper)**: provides `add(...)`, `query(...)`, and `get(...)` on top of a Chroma collection, handling conversion from our `Document`/`Corpus` types to Chroma’s batch format and including metadatas.\n",
+    "- **CorpusLoaderService**: orchestrates ingestion. For JSON, `load_json_dir(store_name, path)` builds a `Corpus` of `Document`s via `JSONLoader` (content = normalized summary; metadata = full JSON), then calls `store.add(corpus)`. Each insert triggers automatic embedding via the collection’s embedding function, so future `query(...)` runs cosine-similarity search over those vectors.\n",
+    "\n",
+    "This separation lets you swap loaders (PDF/JSON/CSV) without changing vector DB code, and keeps Chroma + embeddings configuration centralized in one place.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "b25c36dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VectorStoreManager():<chromadb.api.client.Client object at 0x11aee3ed0>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: Instantiate your ChromaDB Client\n",
-    "# Choose any path you want\n",
-    "# chroma_client = chromadb.PersistentClient(path=\"chromadb\")"
+    "db = VectorStoreManager(OPENAI_API_KEY)\n",
+    "db"
    ]
   },
   {
@@ -125,75 +155,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31c56281",
+   "execution_count": 29,
+   "id": "b28ae6bd-f201-4ec8-89f8-585a3b9108c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Pick one embedding function\n",
-    "# If picking something different than openai, \n",
-    "# make sure you use the same when loading it\n",
-    "# embedding_fn = embedding_functions.OpenAIEmbeddingFunction()"
+    "# loader function looks as follows\n",
+    "def load_json_dir(self, store_name: str, json_path_or_dir: str) -> VectorStore:\n",
+    "    \"\"\"\n",
+    "    Load JSON file(s) into a vector store.\n",
+    "\n",
+    "    If a directory is provided, all *.json files are loaded. Otherwise, a\n",
+    "    single JSON file is loaded. Each JSON record becomes one Document with\n",
+    "    flattened content and full metadata preserved.\n",
+    "\n",
+    "    Args:\n",
+    "        store_name (str): Name of the vector store to create or use\n",
+    "        json_path_or_dir (str): Path to a JSON file or directory of JSON files\n",
+    "\n",
+    "    Returns:\n",
+    "        VectorStore: The vector store containing the loaded JSON content\n",
+    "    \"\"\"\n",
+    "    store = self.manager.get_or_create_store(store_name)\n",
+    "    print(f\"VectorStore `{store_name}` ready!\")\n",
+    "\n",
+    "    loader = JSONLoader(json_path_or_dir)\n",
+    "    corpus = loader.load()\n",
+    "    store.add(corpus)\n",
+    "    print(f\"JSON loaded from `{json_path_or_dir}`!\")\n",
+    "\n",
+    "    return store"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0ec23893",
+   "execution_count": 19,
+   "id": "31c56281",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VectorStore `games_market` ready!\n",
+      "JSON loaded from `./games`!\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Create a collection\n",
-    "# Choose any name you want\n",
-    "# collection = chroma_client.create_collection(\n",
-    "#    name=\"udaplay\",\n",
-    "#    embedding_function=embedding_fn\n",
-    "#)"
+    "loader_service = CorpusLoaderService(db)\n",
+    "games_store = loader_service.load_json_dir(\n",
+    "    store_name=\"games_market\",\n",
+    "    json_path_or_dir=\"./games\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f0a55081",
+   "id": "0540e4ae-1ab4-4893-a0a9-18f47e0fcd41",
    "metadata": {},
    "source": [
-    "### Add documents"
+    "### Demo\n",
+    "\n",
+    "The following is an example of a query on the Vector Store Database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "55b4bf90-7242-46da-8617-06c49ff75198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_text = \"best racing game on PlayStation around 1997\"\n",
+    "results = games_store.query(\n",
+    "    query_texts=[query_text],\n",
+    "    n_results=5,\n",
+    "    where={\"Platform\": \"PlayStation 1\"} \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5905ae60-071d-4fb9-b4b5-4c1e65839a69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "similarity≈0.744 | Gran Turismo (1997) [PlayStation 1]\n",
+      "Name: Gran Turismo\n",
+      "Platform: PlayStation 1\n",
+      "Genre: Racing\n",
+      "Publisher: Sony Computer Entertainment\n",
+      "Year: 1997\n",
+      "Description:  ...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs = results[\"documents\"][0]\n",
+    "metas = results[\"metadatas\"][0]\n",
+    "dists = results[\"distances\"][0]\n",
+    "\n",
+    "for doc, meta, dist in zip(docs, metas, dists):\n",
+    "    print(f\"similarity≈{1 - dist:.3f} | {meta.get('Name')} ({meta.get('YearOfRelease')}) [{meta.get('Platform')}]\")\n",
+    "    print(doc[:120], \"...\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb88ca70",
+   "metadata": {},
+   "source": [
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb83fbb1",
+   "id": "d24a3a74-3ba7-4f9b-8e6f-63a96a9b30e0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Make sure you have a directory \"project/starter/games\"\n",
-    "data_dir = \"games\"\n",
-    "\n",
-    "for file_name in sorted(os.listdir(data_dir)):\n",
-    "    if not file_name.endswith(\".json\"):\n",
-    "        continue\n",
-    "\n",
-    "    file_path = os.path.join(data_dir, file_name)\n",
-    "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "        game = json.load(f)\n",
-    "\n",
-    "    # You can change what text you want to index\n",
-    "    content = f\"[{game['Platform']}] {game['Name']} ({game['YearOfRelease']}) - {game['Description']}\"\n",
-    "\n",
-    "    # Use file name (like 001) as ID\n",
-    "    doc_id = os.path.splitext(file_name)[0]\n",
-    "\n",
-    "    collection.add(\n",
-    "        ids=[doc_id],\n",
-    "        documents=[content],\n",
-    "        metadatas=[game]\n",
-    "    )"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
