project 3 chroma persistence

--- a/03-building-agents/project/Udaplay_01_starter_project.ipynb
+++ b/03-building-agents/project/Udaplay_01_starter_project.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "a8d56169",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "87e465d4",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "False"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "3f444800-0aec-4a82-815b-5111c58a47ab",
    "metadata": {},
    "outputs": [],
@@ -125,17 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "b25c36dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "VectorStoreManager():<chromadb.api.client.Client object at 0x11aee3ed0>"
+       "VectorStoreManager():<chromadb.api.client.Client object at 0x1146f42f0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "b28ae6bd-f201-4ec8-89f8-585a3b9108c1",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "31c56281",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "55b4bf90-7242-46da-8617-06c49ff75198",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "5905ae60-071d-4fb9-b4b5-4c1e65839a69",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "similarity≈0.744 | Gran Turismo (1997) [PlayStation 1]\n",
+      "similarity≈0.743 | Gran Turismo (1997) [PlayStation 1]\n",
       "Name: Gran Turismo\n",
       "Platform: PlayStation 1\n",
       "Genre: Racing\n",
